# Awesome-Adversarial-Threat-Modeling-Framework

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_NOTES.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aatmf_nonai/: __init__.py  attack_surface.py  cli.py  controls.py  reports.py  risk_engine.py  threat_library.py
docs/: standards_crosswalk.md
docs/crosswalks/: standards_full_crosswalk.yaml  standards_full_crosswalk.yaml.bak  threats_crosswalk.yaml
docs/diagrams/: mappings_diagram.mmd
docs/vol-2-core-tactics/: 04-t01-prompt-subversion.md  05-t02-semantic-evasion.md  06-t03-reasoning-exploitation.md  07-t04-multi-turn.md  08-t05-model-api.md  09-t06-training-poisoning.md  10-t07-output-manipulation.md  11-t08-deception.md
docs/vol-3-advanced-tactics/: 12-t09-multimodal.md  13-t10-integrity-breach.md  14-t11-agentic.md  15-t12-rag.md
docs/vol-4-infrastructure-human/: 16-t13-supply-chain.md  17-t14-infrastructure.md  18-t15-human-workflow.md
docs/vol-5-operations/: 20-mitigation.md  23-blue-team-defense.md
docs/vol-6-governance/: 24-risk-management.md  25-compliance-mapping.md
docs/vol-7-appendices/: appendix-c-tools.md  appendix-f-glossary.md
examples/: sample_system.yaml
scripts/: enrich_crosswalk.py  generate_master_matrix.py  generate_master_matrix_revised.py  render_mermaid.sh  run_model.py
scripts/output/: Application.md  Cloud.md  Cybersecurity_Controls_Master_Matrix.md  Data.md  DevSecOps.md  Governance.md  IAM.md  IR_Resilience.md  Monitoring.md  (+2 more)
tests/: test_crosswalk.py  test_threat_library.py
(+1 files in other folders)
